add flight details
